Return when the token expire instead of exact timestamp
